# Smart-Energy-Meter-IOT

./: .gitignore  README.md  deploy.sh  dev.ps1
ML/: README.md  data_pipeline.py  pyproject.toml  train_models.py
ML/models/: ac_1_anomaly_v2.pkl  ac_1_classifier.pkl  ac_2_anomaly_v2.pkl  ac_2_classifier.pkl  boiler_anomaly_v2.pkl  boiler_classifier.pkl  boiler_power_predictor.pkl  dishwasher_anomaly_v2.pkl  dishwasher_power_predictor.pkl  fridge_anomaly_v2.pkl  fridge_classifier.pkl  training_summary_v2.json  washing_machine_anomaly_v2.pkl  washing_machine_classifier.pkl  washing_machine_power_predictor.pkl
Review-Report/: doc.aux  doc.out  doc.synctex(busy)  doc.tex  report_fixed.aux  report_fixed.out  report_fixed.tex
Review-Report/presentation-defense-strategy/: 00-presentation-outline.md  01-objective-hook.md  02-five-minute-architecture-overview.md  03-competitive-edge.md  04-live-demonstration-strategy.md  05-core-technical-highlights.md  06-academic-contribution-slide.md  07-defense-transitions.md  08-four-person-workload-matrix.md
backend/: README.md  data.csv  main.py  ml_service.py  pyproject.toml
backend/static/: index.html  index_v1.html
device/: README_v2.md  boot_v2.py  calibrate.py  calibration.json  main.py  main_v2.py
docs/: 01-project-overview.md  02-system-architecture.md  03-hardware-design.md  04-firmware-guide.md  05-backend-api.md  06-ml-pipeline.md  07-dashboard-ui.md  08-deployment-guide.md  09-api-reference.md  README.md
docs/diagrams/: README.md  data-flow.mmd  device-state-machine.mmd  ml-pipeline.mmd  sequence-diagram.mmd  (+1 more)
(+7 files in other folders)
