[project]
name = "backend"
version = "0.1.0"
description = "Smart Energy Monitor - ML-IoT Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "paho-mqtt>=2.0",
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    "joblib>=1.3",
    "requests>=2.31",
]

[project.scripts]
serve = "main:main"
